--- a/package.json
+++ b/package.json
@@ -9,25 +9,33 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@faker-js/faker": "^8.4.1",
+    "@react-native-async-storage/async-storage": "1.21.0",
+    "axios": "^1.6.8",
+    "deprecated-react-native-prop-types": "^5.0.0",
     "expo": "^50.0.1",
     "expo-camera": "~14.1.1",
     "expo-constants": "~15.4.5",
+    "expo-document-picker": "~11.10.1",
+    "expo-file-system": "~16.0.8",
     "expo-linking": "~6.2.2",
+    "expo-media-library": "~15.9.1",
     "expo-router": "~3.4.8",
+    "expo-sharing": "~11.10.0",
     "expo-splash-screen": "~0.26.4",
     "expo-status-bar": "~1.11.1",
+    "file-saver": "^2.0.5",
     "nativewind": "^4.0.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.73.5",
+    "react-native-cli": "^2.0.1",
     "react-native-reanimated": "~3.6.2",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
     "react-native-swiper": "^1.6.0",
     "react-native-web": "~0.19.10",
     "tailwindcss": "^3.4.0",
-    "expo-barcode-scanner": "~12.9.3"
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
