--- a/app.json
+++ b/app.json
@@ -16,7 +16,8 @@
       "permissions": [
         "WRITE_EXTERNAL_STORAGE",
         "READ_EXTERNAL_STORAGE"
-      ]
+      ],
+      "package": "com.medleb.meddonation"
     },
     "plugins": [
       [
