--- a/package.json
+++ b/package.json
@@ -6,18 +6,22 @@
     "start": "npx expo start -c",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web -c"
   },
   "dependencies": {
+    "@expo/metro-runtime": "~3.1.3",
     "@react-native-async-storage/async-storage": "1.21.0",
+    "@react-native-community/datetimepicker": "7.6.1",
+    "@react-native-community/netinfo": "11.1.0",
+    "@react-native-picker/picker": "2.6.1",
     "axios": "^1.6.8",
-    "deprecated-react-native-prop-types": "^5.0.0",
-    "expo": "^50.0.1",
-    "expo-camera": "~14.1.1",
+    "expo": "~50.0.15",
+    "expo-camera": "~14.1.2",
     "expo-constants": "~15.4.5",
     "expo-document-picker": "~11.10.1",
     "expo-file-system": "~16.0.8",
     "expo-linking": "~6.2.2",
+    "expo-location": "~16.5.5",
     "expo-media-library": "~15.9.1",
     "expo-router": "~3.4.8",
     "expo-sharing": "~11.10.0",
@@ -27,12 +31,14 @@
     "nativewind": "^4.0.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.73.5",
+    "react-native": "0.73.6",
     "react-native-cli": "^2.0.1",
+    "react-native-paper": "^5.12.3",
     "react-native-reanimated": "~3.6.2",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
     "react-native-swiper": "^1.6.0",
+    "react-native-uuid": "^2.0.2",
     "react-native-web": "~0.19.10",
     "tailwindcss": "^3.4.0",
     "xlsx": "^0.18.5"
