--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "expo-router/entry",
   "scripts": {
     "start": "npx expo start -c",
-    "android": "expo start --android",
+    "android": "npx expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web -c"
   },
