--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-native-community/netinfo": "11.1.0",
     "@react-native-picker/picker": "2.6.1",
     "axios": "^1.6.8",
+    "date-fns": "^3.6.0",
     "expo": "~50.0.15",
     "expo-camera": "~14.1.2",
     "expo-constants": "~15.4.5",
