Finishing all the components Styles

--- a/app.json
+++ b/app.json
@@ -6,7 +6,7 @@
     "userInterfaceStyle": "automatic",
     "orientation": "default",
     "web": {
-      "output": "static",
+      // "output": "static",
       "bundler": "metro"
     },
     "icon": "./assets/favicon.png",
@@ -47,9 +47,9 @@
       "typedRoutes": true
     },
     "extra": {
-      // "router": {
-      //   "origin": "https://n"
-      // },
+      "router": {
+        "origin": "https://n"
+      },
       "eas": {
         "projectId": "1e85122e-f12c-403d-b6c4-ea6b9b5ad7db"
       }
