--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@react-native-community/datetimepicker": "7.6.1",
     "@react-native-community/netinfo": "11.1.0",
     "@react-native-picker/picker": "2.6.1",
+    "@react-navigation/elements": "^1.3.30",
+    "@react-navigation/stack": "^6.3.29",
     "axios": "^1.6.8",
     "expo": "~50.0.17",
     "expo-camera": "~14.1.3",
@@ -42,7 +44,8 @@
     "react-native-uuid": "^2.0.2",
     "react-native-web": "~0.19.10",
     "tailwindcss": "^3.4.0",
-    "xlsx": "^0.18.5"
+    "xlsx": "^0.18.5",
+    "expo-build-properties": "~0.11.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
