--- a/package.json
+++ b/package.json
@@ -4,12 +4,15 @@
   "main": "expo-router/entry",
   "scripts": {
     "start": "npx expo start -c",
-    "android": "npx expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web -c"
   },
   "dependencies": {
+    "@expo/cli": "^0.17.10",
+    "@expo/metro-config": "^0.17.7",
     "@expo/metro-runtime": "~3.1.3",
+    "@expo/rudder-sdk-node": "^1.1.1",
     "@material/web": "^1.4.0",
     "@react-native-async-storage/async-storage": "1.21.0",
     "@react-native-community/datetimepicker": "7.6.1",
@@ -18,23 +21,27 @@
     "@react-navigation/elements": "^1.3.30",
     "@react-navigation/stack": "^6.3.29",
     "axios": "^1.6.8",
-    "expo": "~50.0.17",
-    "expo-camera": "~14.1.3",
+    "expo": "^50.0.17",
+    "expo-build-properties": "~0.11.1",
+    "expo-camera": "^14.1.3",
     "expo-constants": "~15.4.6",
     "expo-document-picker": "~11.10.1",
     "expo-file-system": "~16.0.8",
     "expo-linking": "~6.2.2",
     "expo-location": "~16.5.5",
     "expo-media-library": "~15.9.2",
-    "expo-router": "~3.4.8",
+    "expo-modules-core": "^1.11.13",
+    "expo-permissions": "^14.4.0",
+    "expo-router": "~3.4.9",
     "expo-sharing": "~11.10.0",
-    "expo-splash-screen": "~0.26.4",
+    "expo-splash-screen": "^0.26.5",
     "expo-status-bar": "~1.11.1",
     "file-saver": "^2.0.5",
     "nativewind": "^4.0.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.73.6",
+    "react-native": "^0.73.6",
+    "react-native-camera-kit": "^13.0.0",
     "react-native-cli": "^2.0.1",
     "react-native-paper": "^5.12.3",
     "react-native-reanimated": "~3.6.2",
@@ -44,12 +51,13 @@
     "react-native-uuid": "^2.0.2",
     "react-native-web": "~0.19.10",
     "tailwindcss": "^3.4.0",
-    "xlsx": "^0.18.5",
-    "expo-build-properties": "~0.11.1"
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.2.45",
+    "@types/react-native": "^0.73.0",
+    "expo-cli": "^6.3.10",
     "typescript": "^5.3.0"
   },
   "private": true
